components/loader/loader.scss
#loaderContainer {
  position: absolute;
  z-index: 1000;
  width: 100%;
  height: 100%;
  background-color: white;
  // display: none;

  .loader {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    height: $large-space;
    width: $large-space;

    // loader center circle
    &::after {
      width: $medium-space;
      height: $medium-space;
      position: absolute;
      top: 0; left: 0;
      bottom: 0; right: 0;
      margin: auto;
      border-radius: 50%;
      content: "T";
      font-size: 2rem;
      line-height: 4.2rem;
      font-weight: bold;
      text-align: center;
      color: white;
      background-color: $tipsease-purple;
      animation: loaderCenterCircle 2s cubic-bezier(0.770, 0.000, 0.175, 1.000) infinite;
    }

    // left & right circles' container
    span {
      position: absolute;
      top: 0; left: 0;
      bottom: 0; right: 0;
      animation: loaderLeftRightContainer 2s cubic-bezier(0.770, 0.000, 0.175, 1.000) infinite;

      // left & right circles
      &::before, &::after {
        content: "";
        position: absolute;
        top: 0; left: 0;
        bottom: 0; right: 0;
        margin: auto;
        height: 4rem;
        width: 4rem;
        background: $tipsease-green;
        border-radius: 50%;
        animation: loaderRightCircle 2s cubic-bezier(0.770, 0.000, 0.175, 1.000) infinite;
      }

      // left circle
      &::after {
        animation: loaderLeftCircle 2s cubic-bezier(0.770, 0.000, 0.175, 1.000) infinite;
      }
    }


  }

  //====== KEYFRAME SETTINGS ======//

  @keyframes loaderLeftRightContainer {
    0%   { transform: rotate(0deg); }
    50%  { transform: rotate(180deg); }
    100% { transform: rotate(360deg); }
  }

  @keyframes loaderCenterCircle {
    0%   { transform: scale(0); opacity: 0; }
    50%  { transform: scale(1); opacity: 1; }
    100% { transform: scale(0); opacity: 0; }
  }

  @keyframes loaderRightCircle {
    0%   { transform: translate3d(0, 0, 0) scale(1); }
    50%  { transform: translate3d(-150%, 0, 0) scale(.5); }
    100% { transform: translate3d(0, 0, 0) scale(1); }
  }

  @keyframes loaderLeftCircle {
    0%   { transform: translate3d(0, 0, 0) scale(1); }
    50%  { transform: translate3d(150%, 0, 0) scale(.5); }
    100% { transform: translate3d(0, 0, 0) scale(1); }
  }
}

